cleanup, devDep, compile error fixes

--- a/src/styles/index.pcss
+++ b/src/styles/index.pcss
@@ -29,9 +29,8 @@
 
 @import "styles/blocks/header.pcss";
 @import "styles/blocks/footer.pcss";
-@import "styles/blocks/place.pcss";
 
-@import "styles/helpers/text.pcss";
+@import "styles/text.pcss";
 
 @import "styles/pages/index.pcss";
 
